@@ -23,6 +23,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [REDIS] Use proper Sentinel client when updating service
 ### Changed
 - [API_PARSER] [CROWDSTRIKE] Evolve collector to use API v2 instead of v1
+- [API_PARSER] [GATEWATCHER_ALERTS] Merge `raw_alert` into `alert` log object
 - [FILEBEAT] Separate building configurations and restarting service
 - [GUI] Improve AJAX requests management
 - [CLUSTER] Improve node import routine
